# godot-updater

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/core/: Cargo.toml
crates/core/src/: config.rs  download.rs  github.rs  install.rs  lib.rs  platform.rs  versions.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  events.rs  main.rs  theme.rs
crates/tui/src/ui/: download.rs  mod.rs  settings.rs  versions.rs
