[package]
name = "godot-updater-core"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
zip = "2"
sha2 = "0.10"
dirs = "6"
thiserror = "2"
futures-util = "0.3"
